fix: anser overflow in create card input

--- a/src/pages/NewCard/style.module.scss
+++ b/src/pages/NewCard/style.module.scss
@@ -19,7 +19,6 @@
 	border: none;
 	width: 100%;
 
-	height: fit-content;
 	max-width: 100%;
 	max-height: 100%;
 
